# rym-py

./: .buildinfo  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  rym-alias.html  rym-cx.html  rym-lpath.html  rym-token.html  search.html  searchindex.js  tox.ini
.doctrees/: environment.pickle  index.doctree  rym-alias.doctree  rym-cx.doctree  rym-lpath.doctree  rym-token.doctree
.github/: file-filters.yaml
.github/workflows/: cd.yaml  ci-cd.yaml  ci.yaml  docs.yaml  format.yaml  publish-to-pypi.yaml  publish.yaml  py-pkg.yaml  python-build.yaml  python-publish.yaml  test-pdm.yaml  tests.yaml
_sources/: index.rst.txt  rym-cx.rst.txt  rym-lpath.rst.txt  rym-token.rst.txt
docs/: .pdm.toml  Makefile  README.md  pyproject.toml
docs/docs/source/: modules.rst  tests.rst  tests.rym.lpath.rst  tests.rym.rst
docs/source/: api.rst  conf.py  index.rst  mjb-lpath.rst  rym-alias.rst  rym-lpath.rst  rym-test.rst  rym-token.rst
mjb-alias/: .pdm.toml  README.md  pyproject.toml
mjb-alias/tests/mjb/alias/: test_alias.py
mjb-lpath/: .pdm.toml  README.md  pyproject.toml
mjb-lpath/mjb/lpath/: __init__.py  _delim.py  _get.py  _set.py
mjb-lpath/tests/mjb/lpath/: test_delim.py  test_get.py  test_remove.py  test_set.py
rym-alias/: .coveragerc  .pdm.toml  README.md  pyproject.toml  tox.ini
rym-alias/notebooks/: sandbox_timeit_coerce.ipynb  sandbox_timeit_defaultdict.ipynb  sandbox_timeit_lookup.ipynb  sandbox_timings.ipynb
rym-alias/rym/alias/: __init__.py  _alias.py  _aliasresolver.py  _coerce.py  _coerce_explicit.py  _coerce_implicit.py
rym-alias/tests/rym/alias/: test_alias.py  test_alias_nonstring.py  test_aliasfrozen.py  test_aliasresolver.py  test_coerce.py  test_coerce_explicit.py  test_coerce_implicit.py  test_coercer.py  test_doctests.py  test_safesort.py  test_variation.py
rym-cx/: README.md  pyproject.toml
rym-cx/docs/design/: concepts.md  data-oriented-design.md  registrar.md
rym-cx/misc/: naive.openai.py
rym-cx/rym/cx/: __init__.py
rym-cx/rym/cx/core/: __init__.py  _catalog.py  _global.py  _inventory.py  _system.py  component.py  decorator.py  entity.py  errors.py  record.py  registrar.py
rym-cx/tests/rym/cx/core/: test_catalog.py  test_component.py  test_decorator.py  test_entity.py  test_global.py  test_identifier.py  test_inventory.py  test_record.py  test_registrar.py  test_spawn.py  test_system.py
rym-cx/tests/rym/cx/functional/: test_build_simple_ecs.py
rym-lpath/: .coveragerc  .pdm.toml  README.md  pyproject.toml  tox.ini
rym-lpath/rym/lpath/: __init__.py  _delim.py  _get.py  _remove.py  _set.py  errors.py
rym-lpath/tests/rym/lpath/: test_delim.py  test_doctests.py  test_errors.py  test_get.py  test_remove.py  test_set.py
rym-test/: README.md  pyproject.toml
rym-test/docs/: README.md
rym-token/: pyproject.toml
rym-token/rym/token/: structures.py  tokenizer.py  tokenspec.py
rym-token/tests/: __init__.py
rym-token/tests/rym/token/: test_regex.py  test_tokenizer.py  test_tokenspecgroup.py
