[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "coverage>=7.1.0",
    "pytest>=7.2.1",
    "pre-commit>=3.0.4",
    "pytest-cov>=4.0.0",
]

[project]
name = "mjb-lpath"
version = "0.1.0"
description = "A python library for accessing mappings and objects."
authors = [
    {name = "Stephen Bush", email = "muppetjones@gmail.com"},
]
dependencies = []
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
test = [
    "pytest>=6.2",
    "coverage[toml]>=7.1.0",
    "pytest-cov>=4.0.0",
]
lint = [
    "flake8>=3.8",
    "black>=20.8b1",
]


[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"


[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -vvv --cov=mjb"
testpaths = [
    "tests",
]

[tool.black]
line-length = 88
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
atomic = true
line_length = 88